--- a/templates/custom-sudoku-board.html
+++ b/templates/custom-sudoku-board.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     {% load custom_tags %}
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -53,7 +55,7 @@
             font-size: 16px;
             margin: 4px 2px;
             cursor: pointer;
-            width: 19%;
+            width: 216px;
         }
         .success-status
         {
