--- a/templates/sudoku-board.html
+++ b/templates/sudoku-board.html
@@ -53,7 +53,7 @@
             font-size: 16px;
             margin: 4px 2px;
             cursor: pointer;
-            width: 19%;
+            width: 216px;
         }
 
         #cell-0,  #cell-1,  #cell-2  { border-top:    2px solid #000000; }
