--- a/templates/custom-sudoku-board.html
+++ b/templates/custom-sudoku-board.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
     {% load custom_tags %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+   <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>HTML Sudoku Board</title>
+    <title>Sudoku Solver</title>
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
